--- a/Week9.html
+++ b/Week9.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="Week9.js"></script>
-    <title>Week 9 asst</title>
+    <script src="Script.js"></script>
+    <title>Week 9 assignment</title>
   </head>
   <body>
-    <h1>Week 9 Asst</h1>
-    Why is this not displaying?
+    <h1>War Card Game</h1>
   </body>
 </html>
